--- a/resources/osi/gui/style.css
+++ b/resources/osi/gui/style.css
@@ -8,7 +8,7 @@ html, body {
 .char_id {
     background-image: url('osi_character_selection.png');
     display: block;
-    margin: 30px;
+    margin: 20px;
     margin-left: 50px;
     padding: 0px;
     width: 369px;
@@ -17,7 +17,7 @@ html, body {
 }
 
 .char_id * {
-    color:#000056;
+    color:#09203F;
     position: relative;
     font-weight: bold;
     font-family: 'Trebuchet MS', sans-serif;
@@ -117,29 +117,246 @@ html, body {
 }
 
 .overlay {
-  position: relative;
+    position: relative;
 }
 
 .overlay:after {
-  position: absolute;
-  content:"";
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
-  opacity:0;
+    position: absolute;
+    content:"";
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    opacity: .6;
+    background-color: black;
+    border-radius: 12px;
 }
 
 .overlay:hover:after  {
-  opacity: .3;
+    opacity: .1;
+    background-color: white;
 }
 
 .overlay:active:after  {
-  opacity: .3;
-  background-color: black;
+    opacity: .0;
 }
 
-.white:after {
-  background-color: white;
-  border-radius: 12px;
+.selected:after {
+    opacity: .0;
+}
+
+.char_info {
+    background-image: url('osi_character_application.png');
+    display: block;
+    position: absolute;
+    margin: 30px;
+    margin-left: 50px;
+    padding: 0px;
+    width: 436px;
+    height: 522px;
+    top: 120px;
+    right: 300px;
+    cursor: arrow;
+}
+
+.char_info * {
+    color:#000026;
+    position: relative;
+    font-weight: bold;
+    font-family: 'Trebuchet MS', sans-serif;
+    margin-bottom: 10px;
+}
+
+.application form {
+    top: 100px;
+    left: 50px;
+    width:400px;
+}
+
+label {
+    display:inline;
+    font-size: 13px;
+}
+
+input, select {
+    margin-left: 6px;
+    padding-left: 3px;
+    display: inline;
+    font-size: 15px;
+    background-color: rgba(0,0,0,0.1);
+    color: white;
+    width: 120px;
+}
+
+select {
+    direction:rtl;
+    width:200px;
+}
+
+option{
+    direction:rtl;
+}
+
+/* The container */
+.container {
+    display: inline;
+    position: relative;
+    padding-left: 55px;
+    margin-bottom: 10px;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/* Hide the browser's default radio button */
+.container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+
+/* Create a custom radio button */
+.checkmark {
+    position: absolute;
+    top: -2px;
+    left: 30px;
+    height: 18px;
+    width: 18px;
+    background-color: #aaa;
+    border-radius: 50%;
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {
+    background-color: #eaeaea;
+}
+
+/* When the radio button is checked, add a blue background */
+.container input:checked ~ .checkmark {
+    background-color: #999;
+}
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+.container input:checked ~ .checkmark:after {
+    display: block;
+}
+
+/* Style the indicator (dot/circle) */
+.container .checkmark:after {
+    top: 4px;
+    left: 4px;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: #09203F;
+}
+
+.confirm_button {
+    -moz-box-shadow:inset 0px 1px 0px 0px #bee2f9;
+    -webkit-box-shadow:inset 0px 1px 0px 0px #bee2f9;
+    box-shadow:inset 0px 1px 0px 0px #bee2f9;
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #63b8ee), color-stop(1, #468ccf));
+    background:-moz-linear-gradient(top, #63b8ee 5%, #468ccf 100%);
+    background:-webkit-linear-gradient(top, #63b8ee 5%, #468ccf 100%);
+    background:-o-linear-gradient(top, #63b8ee 5%, #468ccf 100%);
+    background:-ms-linear-gradient(top, #63b8ee 5%, #468ccf 100%);
+    background:linear-gradient(to bottom, #63b8ee 5%, #468ccf 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#63b8ee', endColorstr='#468ccf',GradientType=0);
+    background-color:#63b8ee;
+    -moz-border-radius:6px;
+    -webkit-border-radius:6px;
+    border-radius:6px;
+    border:1px solid #3866a3;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Trebuchet MS;
+    font-size:15px;
+    font-weight:bold;
+    padding:7px 17px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #7cacde;
+    width: 100px;
+}
+.confirm_button:hover {
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #468ccf), color-stop(1, #63b8ee));
+    background:-moz-linear-gradient(top, #468ccf 5%, #63b8ee 100%);
+    background:-webkit-linear-gradient(top, #468ccf 5%, #63b8ee 100%);
+    background:-o-linear-gradient(top, #468ccf 5%, #63b8ee 100%);
+    background:-ms-linear-gradient(top, #468ccf 5%, #63b8ee 100%);
+    background:linear-gradient(to bottom, #468ccf 5%, #63b8ee 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#468ccf', endColorstr='#63b8ee',GradientType=0);
+    background-color:#468ccf;
+}
+.confirm_button:active {
+    position:relative;
+    top:1px;
+}
+
+.delete_button {
+    -moz-box-shadow:inset 0px 1px 0px 0px #f29c93;
+    -webkit-box-shadow:inset 0px 1px 0px 0px #f29c93;
+    box-shadow:inset 0px 1px 0px 0px #f29c93;
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #fe1a00), color-stop(1, #ce0100));
+    background:-moz-linear-gradient(top, #fe1a00 5%, #ce0100 100%);
+    background:-webkit-linear-gradient(top, #fe1a00 5%, #ce0100 100%);
+    background:-o-linear-gradient(top, #fe1a00 5%, #ce0100 100%);
+    background:-ms-linear-gradient(top, #fe1a00 5%, #ce0100 100%);
+    background:linear-gradient(to bottom, #fe1a00 5%, #ce0100 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#fe1a00', endColorstr='#ce0100',GradientType=0);
+    background-color:#fe1a00;
+    -moz-border-radius:6px;
+    -webkit-border-radius:6px;
+    border-radius:6px;
+    border:1px solid #d83526;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Trebuchet MS;
+    font-size:15px;
+    font-weight:bold;
+    padding:8px 17px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #b23e35;
+}
+.delete_button:hover {
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ce0100), color-stop(1, #fe1a00));
+    background:-moz-linear-gradient(top, #ce0100 5%, #fe1a00 100%);
+    background:-webkit-linear-gradient(top, #ce0100 5%, #fe1a00 100%);
+    background:-o-linear-gradient(top, #ce0100 5%, #fe1a00 100%);
+    background:-ms-linear-gradient(top, #ce0100 5%, #fe1a00 100%);
+    background:linear-gradient(to bottom, #ce0100 5%, #fe1a00 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ce0100', endColorstr='#fe1a00',GradientType=0);
+    background-color:#ce0100;
+}
+.delete_button:active {
+    position:relative;
+    top:1px;
+}
+
+button {
+    margin-bottom:0px;
+}
+
+i {
+    font-family:Trebuchet MS;
+    font-size:12px;
+}
+
+/* For Firefox */
+input[type='number'] {
+    -moz-appearance:textfield;
+}
+/* Webkit browsers like Safari and Chrome */
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
 }
