Update, first run?

--- a/resources/osi/gui/stylesheets/application.css
+++ b/resources/osi/gui/stylesheets/application.css
@@ -9,7 +9,7 @@
     width: 436px;
     height: 522px;
     top: 100px;
-    right: 300px;
+    right: 20%;
     cursor: arrow;
     opacity:0;
     z-index: 10;
